2005-06-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m.el (w3m-relationship-estimate-rules): Add a rule for Yahoo
	Search Beta.

2005-06-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el: Changes to support an ephemeral group.
	(TOPLEVEL): Add autoloads for `gnus-group-prefixed-name' and
	`gnus-kill-ephemeral-group'.
	(nnshimbun-group-prefixed-name): Accept an optional argument,
	`server'.
	(nnshimbun-group-ephemeral-p): Use the above function.
	(nnshimbun-request-group): Ignore `dont-check' argument when
	requesting an ephemeral group.
	(nnshimbun-close-group): Close a NOV buffer for an ephemeral
	group.
	(gnus-group-make-shimbun-group): Use a prefixed name as an
	ephemeral group.  Kill an ephemeral group before making it an
	ordinary group.

2005-06-26  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-zeit-de.el (shimbun-get-headers): Append
	"?page=all" to the URLs to get complete articles again.

2005-06-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m.el (w3m-relationship-estimate-rules): Improve regexp for
	Google in order to make the scroll-to-next-page feature work on
	Google News as well.

2005-06-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (w3m-search-engine-alist): Add Yahoo Beta.

2005-06-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-wired.el: Removed.

	* shimbun/sb-wired-jp.el (shimbun-wired-jp-get-headers): Fix the
	order of retrieved headers.

2005-06-22  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-msports-nifty.el (shimbun-get-headers): Follow the
	changes of the site.
	(shimbun-msports-nifty-content-start): Ditto.

2005-06-18  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Search Google News in
	US by "google news-en".

2005-06-17  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Add "google news" entry.
