@@ -1,3 +1,8 @@
+2005-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-util.el (w3m-which-command): Make sure the command is not a
+	directory.  cf. <URL:http://emacs-w3m.namazu.org/ml/msg08113.html>.
+
 2005-06-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
 
 	* w3m.el (w3m-relationship-estimate-rules): Add a rule for Yahoo
